--- a/problempattern.yaml
+++ b/problempattern.yaml
@@ -1,41 +1,26 @@
 ---
-- name: Manage Problem Pattern and Launch Ansible Template
+- name: Ansible playbook to perform a PUT request for disabling a feature flag
   hosts: localhost
-  gather_facts: no
-  vars:
-    aac_api_url: "{{ aac_api_url }}"  # URL of Ansible Automation Controller
-    aac_token: "{{ aac_token }}"      # API Access Token
-    template_id: "{{ template_id }}"   # Template ID to launch
-    feature_flag_url: "{{ feature_flag_url }}"  # URL for the feature flag service
-    feature_id: "{{ feature_id }}"     # Feature ID to disable
   tasks:
-    - name: Disable Problem Pattern
+    - name: Disable the db_not_responding feature flag
       uri:
-        url: "{{ feature_flag_url }}/v1/flags/{{ feature_id }}/"
+        url: "http://easytrade-frontend-easytrade.apps.cluster-t4jgw.dynamic.redhatworkshops.io/feature-flag-service/v1/flags/db_not_responding"
         method: PUT
         headers:
-          accept: application/json
-          Content-Type: application/json
+          accept: "application/json"
+          Content-Type: "application/json"
+        body: '{"enabled": false}'
         body_format: json
-        body:
-          enabled: false
         status_code: 200
-      register: disable_result
-    - name: Launch Ansible Template
-      uri:
-        url: "{{ aac_api_url }}/api/v2/job_templates/{{ template_id }}/launch/"
-        method: POST
-        headers:
-          Authorization: "Bearer {{ aac_token }}"
-          Content-Type: application/json
-        body_format: json
-        status_code: 201
-      register: template_launch_result
-    - name: Show Results
+        return_content: yes
+    - name: Debug the result
       debug:
-        msg:
-          - "Problem Pattern Disable Result: {{ disable_result.status }}"
-          - "Template Launch Result: {{ template_launch_result.status }}"
+        var: content
+
+
+
+
+
 
 
 
