--- a/disable_high_cpu_flag.yml
+++ b/disable_high_cpu_flag.yml
@@ -1,7 +1,6 @@
 ---
-- name: Disable "K8s: high CPU usage" feature
+- name: Disable high CPU usage feature
   hosts: localhost
-  gather_facts: no
   vars:
     feature_flag_url: "http://easytrade-frontend-easytrade.apps.cluster-t4jgw.dynamic.redhatworkshops.io/feature-flag-service/v1/flags/high_cpu_usage"
     headers:
